# embraOS-QNM

./: .gitignore  .zenodo.json  ARCHITECTURE.md  CITATION.cff  CONTRIBUTING.md  LICENSE  PREREG-Capability-Cost.md  PSI-OPERATIONAL-GROUNDING.md  README.md  node-scale-hallucination-study.md  pyproject.toml
.github/workflows/: ci.yml
assets/: temp
docs/: DECODE-AND-PSI-PERSISTENCE.md  EPOCH-INVARIANT-GROUNDING.md  NEXT-STEPS-P2.5-P2.7.md  P2.7-PSI-CARRY-DECODE-HANDOFF.md  POCKET.md  PREREG-Capability-Cost.md  PSI-ANALYSIS-EMBRA.md  PSI-EMBRA-ANALYSIS-AND-FINDINGS.md  PSI-GEOMETRIC-FINDINGS.md
src/embraos_qnm/: __init__.py  config.py  device.py  generate.py  interfaces.py  seed.py  train.py  train_enforce.py
src/embraos_qnm/core/: __init__.py  block.py  hf_core.py  hf_gpt2_core.py  transformer.py
src/embraos_qnm/data/: __init__.py  tokenizer.py  toy.py
src/embraos_qnm/eval/: __init__.py  analysis.py  arms.py  capability.py  embra_prompt.py  honesty_corpus.py  judge.py  judge_llm.py  kappa.py  metrics.py  prereg.py  prompts.py  rejudge.py  replica.py  run.py  train_probes.py
src/embraos_qnm/fabric/: __init__.py  gnn.py  graph.py  noop.py
src/embraos_qnm/manifold/: __init__.py  model.py  qnm_block.py
src/embraos_qnm/world_state/: __init__.py  candidate.py  noop.py
tests/: conftest.py  test_analysis.py  test_bit_identity.py  test_checkpoint.py  test_core_replica.py  test_decode_psi.py  test_determinism.py  test_distill.py  test_embra_prompt.py  test_enforce.py  test_eval.py  test_fabric.py  test_gates.py  test_gpt2_core.py  test_hf_core.py  test_judge_kappa.py  test_norm_nullspace.py  test_pathway_capacity.py  test_probe_scout.py  test_rejudge.py  test_replica.py  test_shapes.py  test_smoke.py  test_tokenizer.py  test_train_probes.py  test_transformer.py
validation/: README.md  human_labels.base.json  human_labels.json
