[project]
name = "embraos-qnm"
version = "0.1.0"
description = "embraOS-QNM — Quantum Neural Manifold (classical approximation): architecture-layer identity/soul constraints for language models."
readme = "README.md"
# Pinned below 3.13: the dev machine's system Python is 3.14, which is ahead of
# stable torch wheels. uv provisions 3.12 (see .python-version).
requires-python = ">=3.11,<3.13"
authors = [{ name = "William Ward", email = "william@wsds.io" }]
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "pyright>=1.1.380",
]
# Pretrained HF causal-LM backends (P3 GPT-2, P2 Qwen2.5): transformers + tokenizers. Kept OUT
# of the default dev/CI sync to stay light; `uv sync --extra hf` enables the GPT-2/Qwen cores + tests.
hf = [
    "transformers>=4.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/embraos_qnm"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# The formatter manages line width; E501 only fires on unsplittable strings/URLs.
ignore = ["E501"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
